Archive2/93/aa713e1a4b6fb2/output
main.cpp: In function ‘main’:
main.cpp:18:10: warning: comparisons like ‘X<=Y<=Z’ do not have their mathematical meaning [-Wparentheses]
     if((0<=a1<=31)&&(1<=a2<=12)&&(1792<=a3<=2208))
          ^
main.cpp:18:23: warning: comparisons like ‘X<=Y<=Z’ do not have their mathematical meaning [-Wparentheses]
     if((0<=a1<=31)&&(1<=a2<=12)&&(1792<=a3<=2208))
                       ^
main.cpp:18:39: warning: comparisons like ‘X<=Y<=Z’ do not have their mathematical meaning [-Wparentheses]
     if((0<=a1<=31)&&(1<=a2<=12)&&(1792<=a3<=2208))
                                       ^
main.cpp:20:9: error: ‘ulDatum’ undeclared (first use in this function)
         ulDatum = a3;
         ^
main.cpp:20:9: note: each undeclared identifier is reported only once for each function it appears in
main.cpp:12:19: warning: unused variable ‘ulDate’ [-Wunused-variable]
     unsigned long ulDate;
                   ^
